--- a/modules/35-calling-functions/150-calling-funcitons-expression/description.ru.yml
+++ b/modules/35-calling-functions/150-calling-funcitons-expression/description.ru.yml
@@ -32,17 +32,17 @@ theory: |
   Поговорим о функциях. Вызов функции это выражение или нет? Мы знаем что функции возвращают результат, то есть да, они выражения. Из этого автоматически следует много интересного. Например мы можем использовать вызов функции прямо в математических операциях. Вот как можно получить индекс последнего символа в слове:
 
   ```python
-  name = 'python'
+  name = 'python' # Длина слова 6 символов
   # Индексы начинаются с нуля
   # Вызов метода и вычитание вместе!
   last_index = len(name) - 1
-  print(last_index) # 9
+  print(last_index) # 5
   ```
 
   В этом коде нет нового синтаксиса. Мы всего лишь соединили уже известные части опираясь на их природу. Можно пойти еще дальше:
 
   ```python
-  print(len(name) - 1) # 9
+  print(len(name) - 1) # 5
   ```
 
   Все это справедливо для любых функций, например строковых:
