--- a/modules/31-advanced-strings/25-interpolation/description.ru.yml
+++ b/modules/31-advanced-strings/25-interpolation/description.ru.yml
@@ -13,7 +13,7 @@ theory: |
   # => 'Hello, Joffrey!'
   ```
 
-  Конкатенция работает просто, но выглядит не всегда наглядно. Из-за использования кавычек сложно разглядет то, каким будет конечный результат. И чем сложнее устроена строка, тем запутаннее она начнет выглядеть. У конкатенации есть альтернатива - **Интерполция**. Вот, как это выглядит:
+  Конкатенция работает просто, но выглядит не всегда наглядно. Из-за использования кавычек сложно разглядет то, каким будет конечный результат. И чем сложнее устроена строка, тем запутаннее она начнет выглядеть. У конкатенации есть альтернатива - **Интерполяция**. Вот, как это выглядит:
 
   ```python
   first_name = 'Joffrey'
