--- a/modules/40-define-functions/200-return/description.ru.yml
+++ b/modules/40-define-functions/200-return/description.ru.yml
@@ -24,7 +24,7 @@ theory: |
   def greet_hexlet():
       message = 'Hello, Hexlet!'
       return message
-      print('Я никогда не выполнюсь')
+      print('Я никогда не выполнуюсь')
   ```
 
   Для возврата не обязательно использовать переменную. Так как `return` работает с выражениями, то справа от него может появиться почти все что угодно. Здесь нужно руководствоваться принципами читаемости кода:
